# Schrodinger2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Schrodinger2D - Shortcut.lnk  imgui.ini
examples/: scene.json  smoke_example.json
src/: main.cpp
src/io/: scene.cpp  scene.hpp
src/sim/: potential.cpp  potential.hpp  simulation.cpp  simulation.hpp  solver.cpp  solver.hpp  tridiag.hpp
src/ui/: field_renderer.cpp  field_renderer.hpp  gui.cpp  gui.hpp  presets.cpp  presets.hpp
